feat: headless cms changelog updates

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -6,6 +6,13 @@ description: See what's new in Webiny version 5.35.0.
 
 import { Alert } from "@/components/Alert";
 
+import modalSearch from "./assets/modal-search.png";
+import modelFieldAppearance from "./assets/model-field-appearance.png";
+import referencedItems from "./assets/referenced-items.png";
+import multipleModelReference from "./assets/multiple-model-reference.png";
+import multipleModelReferenceModalDropdown from "./assets/multiple-model-reference-modal-dropdown.png";
+import modelWithDefaultFields from "./assets/model-with-default-fields.png"
+
 ## Lambda Functions
 
 ### Removing the Headless CMS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
@@ -21,3 +28,40 @@ Starting with the `5.35.0` release, there is only a single Lambda Function which
 We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users.
 
 To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
+
+## Headless CMS
+
+### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
+
+We added the ability to define the singular and plural model API names for the Headless CMS models.
+Before the version 5.35.0, the API name was always created from the `modelId` property and for the plural, we used [pluralize](https://www.npmjs.com/package/pluralize) library, which did not create correct plural names languages other than the English.
+
+The models created via the Admin UI will always need to have singular and plural API name defined, but the models created via the code will have the singular and plural API name only if they are set as not private.
+
+### Singular And Plural Model API Name Migration ([#3117](https://github.com/webiny/webiny-js/pull/3117))
+
+For the singular and plural model API name functionality, we added a migration which will run after the first deploy.
+The migration updates all the models in all the tenants and locales.
+
+Because the handler code is deployed before the migration is executed, existing models do not have the `singularApiName` and `pluralApiName` properties defined, and for that case we have a fallback in the code - so your API does not fail until the migration is executed.
+
+### Detailed (Advanced) Admin UI Reference Field ([#2969](https://github.com/webiny/webiny-js/pull/2969))
+
+We added a new reference field renderer, called "Detailed view with modal search".
+The Detailed renderer is now a default renderer for all the new reference fields, but users can switch to the old one whenever they want to - or from the old one to the new one.
+
+<Image src={modelFieldAppearance} title={"Model Field Appearance Tab"} />
+<Image src={referencedItems} title={"List of referenced Items"} />
+<Image src={modalSearch} title={"Modal Search of References"} />
+<Image src={multipleModelReference} title={"Multiple Model Reference Field"}/>
+<Image src={multipleModelReferenceModalDropdown} title={"Multiple Model Reference Field Model Choice Dropdown"} />
+
+### Default Model Fields ([#2977](https://github.com/webiny/webiny-js/pull/2977)) ([#2978](https://github.com/webiny/webiny-js/pull/2978))
+
+We added the ability create a new model with the default fields defined. Default fields are:
+* Title (title) - text field
+* Description (description) - long text
+* Image (image) - file field with images only
+
+By the default, the checkbox defining the default fields creation is checked, but users can uncheck it if they do not want to create the default fields.
+<Image src={modelWithDefaultFields} title={"Model With Default Fields Checkbox"} />
