fix: link the project setup migration guide

--- a/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
+++ b/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
@@ -20,7 +20,7 @@ Starting with 5.35.0, all remote GraphQL API HTTP requests are handled by a sing
 
 ## Prerequisites
 
-Before upgrading to 5.35.0 and continuing with this migration guide, please ensure your Webiny project is using the [new project setup](/docs/release-notes/5.29.0/changelog#brand-new-project-setup), introduced with Webiny [5.29.0](/docs/release-notes/5.29.0/changelog). In case you did not already migrate, please visit the [migration guide](#TODO).
+Before upgrading to 5.35.0 and continuing with this migration guide, please ensure your Webiny project is using the [new project setup](/docs/release-notes/5.29.0/changelog#brand-new-project-setup), introduced with Webiny [5.29.0](/docs/release-notes/5.29.0/changelog). In case you did not already migrate, please visit the [migration guide](/docs/release-notes/5.29.0/project-setup-migration).
 
 ## What Is the Reason for This Change?
 
