--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -13,22 +13,6 @@ import multipleModelReference from "./assets/multiple-model-reference.png";
 import multipleModelReferenceModalDropdown from "./assets/multiple-model-reference-modal-dropdown.png";
 import modelWithDefaultFields from "./assets/model-with-default-fields.png"
 
-## Lambda Functions
-
-### Removing the Headless CMS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
-
-<Alert type="warning">
-
-In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it is quite simple to fix.
-
-</Alert>
-
-Starting with the `5.35.0` release, there is only a single Lambda Function which handles the requests - the one called GraphQL (`apps/api/graphql`).
-
-We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users.
-
-To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
-
 ## Headless CMS
 
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
@@ -65,3 +49,19 @@ We added the ability create a new model with the default fields defined. Default
 
 By the default, the checkbox defining the default fields creation is checked, but users can uncheck it if they do not want to create the default fields.
 <Image src={modelWithDefaultFields} title={"Model With Default Fields Checkbox"} />
+
+## Cloud Infrastructure
+
+### Removing the Headless CMS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
+
+<Alert type="warning">
+
+  In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it is quite simple to fix.
+
+</Alert>
+
+Starting with the `5.35.0` release, there is only a single Lambda Function which handles the requests - the one called GraphQL (`apps/api/graphql`).
+
+We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users.
+
+To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
