fix: add changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -50,6 +50,22 @@ We added the ability create a new model with the default fields defined. Default
 By the default, the checkbox defining the default fields creation is checked, but users can uncheck it if they do not want to create the default fields.
 <Image src={modelWithDefaultFields} title={"Model With Default Fields Checkbox"} />
 
+## Page Builder
+
+### Theme Object Now Available In Emotion Styled Components ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+
+### Introduced `mq` Utility Function For Easier Styling ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+
+### Fixed Highlighting Of Active Page Elements In Page Editor ([#3152](https://github.com/webiny/webiny-js/pull/3152))
+
+### Trimming of Trailing Slash In Page Path ([#3153](https://github.com/webiny/webiny-js/pull/3153))
+
+### Using SEO Title Instead Of General Settings Title ([#3155](https://github.com/webiny/webiny-js/pull/3155))
+
+### Using `@container` CSS Rule In Page Editor ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+
+## Form Builder
+
 ## Cloud Infrastructure
 
 ### Removing the Headless CMS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
@@ -65,3 +81,13 @@ Starting with the `5.35.0` release, there is only a single Lambda Function which
 We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users.
 
 To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
+
+## Development
+
+### Introduced Application Name-based Environment Variable Naming ([#3095](https://github.com/webiny/webiny-js/pull/3095))
+
+### Emotion 11 ([#3138](https://github.com/webiny/webiny-js/pull/3138))
+
+### New Frontend  Utility Functions ([#3126](https://github.com/webiny/webiny-js/pull/3126))
+
+
