wip: document changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -40,7 +40,7 @@ The Detailed renderer is now a default renderer for all the new reference fields
 <Image src={multipleModelReference} title={"Multiple Model Reference Field"}/>
 <Image src={multipleModelReferenceModalDropdown} title={"Multiple Model Reference Field Model Choice Dropdown"} />
 
-### Default Model Fields ([#2977](https://github.com/webiny/webiny-js/pull/2977)) ([#2978](https://github.com/webiny/webiny-js/pull/2978))
+### Default Model Fields ([#2977](https://github.com/webiny/webiny-js/pull/2977) [#2978](https://github.com/webiny/webiny-js/pull/2978))
 
 We added the ability create a new model with the default fields defined. Default fields are:
 * Title (title) - text field
@@ -52,9 +52,20 @@ By the default, the checkbox defining the default fields creation is checked, bu
 
 ## Page Builder
 
-### Theme Object Now Available In Emotion Styled Components ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+### Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086)) 
 
-### Introduced `mq` Utility Function For Easier Styling ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+### Multiple UI Improvements
+
+feat: add more export block options https://github.com/webiny/webiny-js/pull/3109
+
+feat: page blocks UI improvements https://github.com/webiny/webiny-js/pull/3106
+
+fix: fix preview button URLs https://github.com/webiny/webiny-js/pull/3103
+
+fix: change order of block categories https://github.com/webiny/webiny-js/pull/3099
+
+feat: improve blocks search functionality https://github.com/webiny/webiny-js/pull/2968
+
 
 ### Fixed Highlighting Of Active Page Elements In Page Editor ([#3152](https://github.com/webiny/webiny-js/pull/3152))
 
@@ -62,9 +73,41 @@ By the default, the checkbox defining the default fields creation is checked, bu
 
 ### Using SEO Title Instead Of General Settings Title ([#3155](https://github.com/webiny/webiny-js/pull/3155))
 
+### feat: grid and cell adjustments https://github.com/webiny/webiny-js/pull/3012
+
+### Theme Object Now Available In Emotion Styled Components ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+
+### Introduced `mq` Utility Function For Easier Styling ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+
 ### Using `@container` CSS Rule In Page Editor ([#3141](https://github.com/webiny/webiny-js/pull/3141))
 
 ## Form Builder
+
+### Introduced E-Mail Triggers ([#2957](https://github.com/webiny/webiny-js/pull/2957))
+E-mail - Submission Notification
+E-mail - Thank You E-mail
+
+### Added the Ability to Import/export Forms ([#3077](https://github.com/webiny/webiny-js/pull/3077))
+
+### Improved Export Of Submissions  ([#3093](https://github.com/webiny/webiny-js/pull/3093) [#2965](https://github.com/webiny/webiny-js/pull/2965))
+
+fix: fix unreadable form submission values
+
+feat: add date to form submission export
+
+### Introduced Copy Form Submission to Clipboard ([#2952](https://github.com/webiny/webiny-js/pull/2952))
+
+### Ability to Have "Other" Option ([#3031](https://github.com/webiny/webiny-js/pull/3031))
+
+### Multiple Improvements on the Default Form Layout ([#3009](https://github.com/webiny/webiny-js/pull/3009) [#2950](https://github.com/webiny/webiny-js/pull/2950) [#2964](https://github.com/webiny/webiny-js/pull/2964))
+
+fix: add missed required field indicator change 
+
+feat: add an indicator that the form field is required 
+
+feat: move help text under the form label 
+
+### Added Basic Form Field ID Validation ([#3017](https://github.com/webiny/webiny-js/pull/3017))
 
 ## Cloud Infrastructure
 
@@ -90,4 +133,6 @@ To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/rel
 
 ### New Frontend  Utility Functions ([#3126](https://github.com/webiny/webiny-js/pull/3126))
 
+## Documentation
 
+### Updated Page Builder and Form Builder Theming Articles
