wip: document changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -13,6 +13,12 @@ import multipleModelReference from "./assets/multiple-model-reference.png";
 import multipleModelReferenceModalDropdown from "./assets/multiple-model-reference-modal-dropdown.png";
 import modelWithDefaultFields from "./assets/model-with-default-fields.png"
 
+import exportingBlocksFromCategory from "./assets/exporting-blocks-from-category.png";
+import improvedBlocksSearch from "./assets/improved-blocks-search.png";
+import pbEditorBordersVisible from "./assets/pb-editor-borders-visible.png";
+import trailingSlashPbPageSettings from "./assets/trailing-slash-pb-page-settings.png";
+import pbSettingsPagePathSeo from "./assets/pb-settings-page-path-seo.png";
+
 ## Headless CMS
 
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
@@ -56,30 +62,163 @@ By the default, the checkbox defining the default fields creation is checked, bu
 
 ### Multiple UI Improvements
 
-feat: add more export block options https://github.com/webiny/webiny-js/pull/3109
+Webiny's Page Builder application has been improved with a new batch of UI improvements.
 
-feat: page blocks UI improvements https://github.com/webiny/webiny-js/pull/3106
+#### Exporting Blocks From Current Category ([#3109](https://github.com/webiny/webiny-js/pull/3109))
 
-fix: fix preview button URLs https://github.com/webiny/webiny-js/pull/3103
+For starters, upon exporting blocks, users can now choose whether they want to only export blocks that belong to the currently selected category of blocks.
 
-fix: change order of block categories https://github.com/webiny/webiny-js/pull/3099
+<Image src={exportingBlocksFromCategory} title={"Exporting Blocks From Current Category"} />
+
+#### Improved Searching of Blocks ([#2968](https://github.com/webiny/webiny-js/pull/2968))
+
+From now on, typing into the **SEARCH BLOCKS** search field will perform a search across all block categories, where the UI will respond in the following way. 
+
+In the list of block categories (left side), it will filter out categories that don't contain at least one block whose name is matched by the search query. Once a category is clicked, in the list of blocks (right side), only matched blocks will be listed. 
+
+<Image src={improvedBlocksSearch} title={"Improved Searching of Blocks"} />
+
+#### Improved Sorting of Block Categories ([#3099](https://github.com/webiny/webiny-js/pull/3099)) 
+
+Prior to this release, across different screens within the Admin application, we've had different default sorting applied when listing block categories.
+
+For consistency sakes, by default, every list of block categories across different screens within the Admin application will now be sorted alphabetically. User can then apply a different sort, if need be.
+
+#### feat: page blocks UI improvements https://github.com/webiny/webiny-js/pull/3106
+
+#### fix: fix preview button URLs https://github.com/webiny/webiny-js/pull/3103
+
+
 
 feat: improve blocks search functionality https://github.com/webiny/webiny-js/pull/2968
 
 
 ### Fixed Highlighting Of Active Page Elements In Page Editor ([#3152](https://github.com/webiny/webiny-js/pull/3152))
 
+In the page editor, when clicking on some page elements like Image and Form, orange borders that surround the element would not be rendered correctly.
+
+<Image src={pbEditorBordersVisible} title={"Fixed Highlighting Of Active Page Elements In Page Editor"} />
+
+This has now been addressed. The orange borders should be rendered correctly for all page elements.
+
 ### Trimming of Trailing Slash In Page Path ([#3153](https://github.com/webiny/webiny-js/pull/3153))
+
+In the page editor, in page's general settings, providing a page path that ends with a forward slash would break background page rendering which happens once the page has been published.
+
+<Image src={trailingSlashPbPageSettings} title={"Trimming of Trailing Slash In Page Path"} />
+
+From now on, trailing slashes in page path will be removed, ensuring the page gets rendered correctly once published.
 
 ### Using SEO Title Instead Of General Settings Title ([#3155](https://github.com/webiny/webiny-js/pull/3155))
 
-### feat: grid and cell adjustments https://github.com/webiny/webiny-js/pull/3012
+From now on, the title specified in the SEO settings section will be used as the title for published pages (title set via the [`<title>`](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/title) HTML tag).
+
+<Image src={pbSettingsPagePathSeo} title={"Using SEO Title Instead Of General Settings Title"} />
+
+Previously, the title specified via the General settings would be used instead, which, often, we've seen it's not something users would expect. 
+
+<Alert type="info">
+  
+  The title specified in the General settings section will still be used as the page title if one wasn't specified in the SEO settings section.
+  
+</Alert>
+
+### Improved Grid and Cell Page Elements https://github.com/webiny/webiny-js/pull/3012
+
+Grid page element now provides users with a couple of new features in page element settings.
+
+For starters, users can now choose the number of rows for the grid, enabling them to quickly have multiple rows of columns, and not just one.
+
+Also, users can now easily have child cells' heights expand and take the full height of the parent grid via the new Grid height setting 
+
+Finally, vertical centering.
 
 ### Theme Object Now Available In Emotion Styled Components ([#3141](https://github.com/webiny/webiny-js/pull/3141))
 
+Prior to this release, if users wanted to use [Emotion styled components](https://emotion.sh/docs/styled) with their [custom page elements](https://www.webiny.com/docs/page-builder/extending/create-a-page-element) and needed to access the [theme](https://github.com/webiny/webiny-js/blob/dev/packages/cwp-template-aws/template/common/apps/theme/theme.ts), they were unable to do it as documented in Emotion's [Theming](https://emotion.sh/docs/theming) documentation article, which is via the [React context](https://react.dev/learn/passing-data-deeply-with-context).
+
+With this release, the theme will internally be loaded into Emotion's `ThemeProvider`, meaning it will be available in your custom Emotion styled components.
+
+The following is an example of an Emotion styled component that uses the theme object:
+
+```tsx
+export const HeroSectionWithTheme = styled.div(({ theme }) => ({
+    lineHeight: "125%",
+    backgroundColor: theme.styles.colors.color1,
+    backgroundRepeat: "no-repeat"
+}));
+```
+
+### Custom Responsive Emotion Styled Components Are Now Rendered Correctly In the Page Editor ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+
+Prior to this release, if users wanted to use [Emotion styled components](https://emotion.sh/docs/styled) with their [custom page elements](https://www.webiny.com/docs/page-builder/extending/create-a-page-element), they would be unable to see them adapt to different screen sizes in the page editor, while building their pages. Essentially, different CSS rules defined via [media queries](https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries) would work on the public website, but not in the page editor.
+
+With this release, your custom responsive Emotion styled components should be rendered the same both on the public website and in the page editor.
+
+<Alert type="info">
+
+  Ensuring responsive design works on both public website and in the page editor was achieved via the [`@container` CSS at-rule](https://developer.mozilla.org/en-US/docs/Web/CSS/@container). Essentially, the page canvas in the page editor is now a container, and, while in the page editor, breakpoints and their `@media` queries defined in the [theme](https://github.com/webiny/webiny-js/blob/dev/packages/cwp-template-aws/template/common/apps/theme/theme.ts) get transformed into `@container pb-page-canvas` rules.
+  
+  More information on this can be found in the new [Theming](/docs/{exact:5.35.x}/page-builder/theming/introduction) article.
+  
+</Alert>
+
 ### Introduced `mq` Utility Function For Easier Styling ([#3141](https://github.com/webiny/webiny-js/pull/3141))
 
-### Using `@container` CSS Rule In Page Editor ([#3141](https://github.com/webiny/webiny-js/pull/3141))
+One of the tools that is recommended in [Emotion](https://emotion.sh/docs/introduction) library's documentation portal is [Facepaint](https://github.com/emotion-js/facepaint). The library enables the developer to easily define CSS rules for multiple pre-defined breakpoints, for example:
+
+```ts
+import { css } from 'emotion'
+import facepaint from 'facepaint'
+
+const mq = facepaint([
+  '@media(min-width: 420px)',
+  '@media(min-width: 920px)',
+  '@media(min-width: 1120px)'
+])
+
+const myClassName = css(mq({
+  color: ['red', 'green', 'blue', 'darkorchid'],
+}))
+```
+
+With this release, we've decided to include this library in the [`@webiny/app-page-builder-elements`](https://github.com/webiny/webiny-js/tree/dev/packages/app-page-builder-elements) package, enabling users to immediately use it, without the need to install it first. Furthermore, by importing the `mq` utility function, users can immediately start writing their per-breakpoint styles, because the function is already configured to follow the breakpoints defined in the  [theme](https://github.com/webiny/webiny-js/blob/dev/packages/cwp-template-aws/template/common/apps/theme/theme.ts). For example:
+
+```tsx
+import React from "react";
+import { mq } from "@webiny/app-page-builder-elements";
+import styled from "@emotion/styled";
+
+// Basic usage.
+export const HeroSection = styled("div")(
+    () => mq({ color: ["red", "green", "blue", "gray", "white"] })
+);
+
+// With theme being accessed via the `theme` argument:
+export const HeroSectionWithTheme = styled("div")(
+    {
+        lineHeight: "125%",
+        backgroundColor: "#fff",
+        backgroundRepeat: "no-repeat"
+    },
+    ({ theme }) =>
+        mq({
+            color: [
+                "red",
+                theme.styles.colors.color1,
+                theme.styles.colors.color2,
+                theme.styles.colors.color3,
+                theme.styles.colors.color4
+            ]
+        })
+);
+```
+
+<Alert type="info">
+
+  More information on this can be found in the new [Theming](/docs/{exact:5.35.x}/page-builder/theming/introduction) article.
+
+</Alert>
 
 ## Form Builder
 
@@ -111,7 +250,7 @@ feat: move help text under the form label
 
 ## Cloud Infrastructure
 
-### Removing the Headless CMS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
+### Removing the Headless CMS AWS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
 
 <Alert type="warning">
 
