wip: document changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -268,9 +268,76 @@ To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/rel
 
 ### Introduced Application Name-based Environment Variable Naming ([#3095](https://github.com/webiny/webiny-js/pull/3095))
 
+With this release, we're simplifying the way environment variables are defined by users.
+
+We're introducing the following environment variable prefixes, where each prefix designates into which project application the variable will get assigned:
+
+```bash
+# Variables with this prefix will get assigned into all AWS Lambda 
+# functions deployed as part of the API project application.
+WEBINY_API_
+
+# Variables with this prefix will get assigned into the Admin React application.
+WEBINY_ADMIN_
+
+# Variables with this prefix will get assigned into the Website React application.
+WEBINY_WEBSITE_ 
+```
+
+Note that this new feature is backwards compatible. All previously defined environment variables in users' projects will still work as usual.
+
 ### Emotion 11 ([#3138](https://github.com/webiny/webiny-js/pull/3138))
 
-### New Frontend  Utility Functions ([#3126](https://github.com/webiny/webiny-js/pull/3126))
+With this release, we are upgrading [Emotion](https://emotion.sh/docs/emotion-11) library to version 11.
+
+This upgrade enables Webiny users to use all of the latest and greatest features the library offers. 
+
+For Webiny itself, the new version enabled us to [provide the theme object](#theme-object-now-available-in-emotion-styled-components-3141) upon creating custom Emotion styled components.
+
+ Note that the migration script included with this release will ensure the library is upgraded to the new version. Users do not need to upgrade the library manually.
+
+### New Frontend Utility Functions ([#3126](https://github.com/webiny/webiny-js/pull/3126))
+
+A couple of new useful frontend development-related utility functions have been introduced in this release.
+
+```ts
+import {
+    getApiUrl,
+    getGqlApiUrl,
+    getHeadlessCmsGqlApiUrl,
+    getLocaleCode,
+    getPrerenderId,
+    getTenantId,
+    isLocalhost,
+    isPrerendering
+} from "@webiny/app-website"; // Or "@webiny/app-admin".
+
+// Returns URL of Webiny's backend API.
+getApiUrl() // https://xyz.cloudfront.net
+
+// Returns URL of Webiny's backend GraphQL API.
+getGqlApiUrl() // https://xyz.cloudfront.net/graphql
+
+// Returns URLs of Webiny's backend Headless CMS GraphQL API.
+getHeadlessCmsGqlApiUrl() // { preview: "...", manage: "...", read: "..."}
+
+// Returns locale used on the page.
+getLocaleCode() // en-US
+
+// Returns current prerendering process' ID.
+getPrerenderId() // abc123xyz 
+    
+// Returns current tenant.
+getTenantId() // root
+
+// Returns `true` if the application is run on localhost.
+isLocalhost() // true
+
+// Returns true if the page is being prerendered.
+isPrerendering() // true
+```
+
+Except for the prerendering-related utility functions, these can be used within both Admin and Website applications.
 
 ## Documentation
 
