wip: document changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -18,6 +18,15 @@ import improvedBlocksSearch from "./assets/improved-blocks-search.png";
 import pbEditorBordersVisible from "./assets/pb-editor-borders-visible.png";
 import trailingSlashPbPageSettings from "./assets/trailing-slash-pb-page-settings.png";
 import pbSettingsPagePathSeo from "./assets/pb-settings-page-path-seo.png";
+import pagePreviewLinkInRevisionsList from "./assets/page-preview-link-in-revisions-list.png";
+
+import editBlockButtonEditor from "./assets/edit-block-button-editor.png";
+import refreshBlockButtonEditor from "./assets/refresh-block-button-editor.png";
+import blockNameInEditor from "./assets/block-name-in-editor.png";
+import pagePreviewLInkInRevisionsList from "./assets/page-preview-link-in-revisions-list.png";
+import pbEditorRefreshBlocks from "./assets/pb-editor-refresh-blocks.png";
+
+
 
 ## Headless CMS
 
@@ -84,16 +93,42 @@ Prior to this release, across different screens within the Admin application, we
 
 For consistency sakes, by default, every list of block categories across different screens within the Admin application will now be sorted alphabetically. User can then apply a different sort, if need be.
 
-#### feat: page blocks UI improvements https://github.com/webiny/webiny-js/pull/3106
+#### Multiple Smaller Blocks-related UI Improvements  ([#3106](https://github.com/webiny/webiny-js/pull/3106))
 
-#### fix: fix preview button URLs https://github.com/webiny/webiny-js/pull/3103
+The following are some of the smaller but still useful blocks-related UI improvements we've made.
+
+##### **Edit Block Button**
+
+In the page editor, once a block has been selected on the page canvas, in the right sidebar, the newly added **Edit** button enables users to quickly open the block in the block editor and make necessary changes to it.
+
+<Image src={editBlockButtonEditor} title={"Edit Block Button"} />
 
 
+##### **Refresh Block Button**
 
-feat: improve blocks search functionality https://github.com/webiny/webiny-js/pull/2968
+With the **Edit** button, we've also introduced the **Refresh** button. As the name suggests, once clicked, the selected block will be refreshed, reflecting changes that may have been done to the block by the user potentially in a separate browser tab, or by other user. 
 
+<Image src={refreshBlockButtonEditor} title={"Refresh Block Button"} />
 
-### Fixed Highlighting Of Active Page Elements In Page Editor ([#3152](https://github.com/webiny/webiny-js/pull/3152))
+##### **Block Name Displayed In the Page Editor**
+
+When a block is selected on the page canvas, the name of the block will be displayed in the top-right corner, making it easier for users to identify blocks on the page. 
+
+<Image src={blockNameInEditor} title={"Block Name Displayed In the Page Editor"} />
+
+##### **Refresh List of Blocks Button**
+
+<Image src={pbEditorRefreshBlocks} title={"Refresh List of Blocks Button"} />
+
+#### Previewing Pages From Revisions List Now Works Correctly ([#3103](https://github.com/webiny/webiny-js/pull/3103))
+
+In the page revisions lists, clicking on the **Preview** link would in certain cases incorrectly redirect users to the public website, instead of page's preview URL.
+
+<Image src={pagePreviewLinkInRevisionsList} title={"Previewing Pages From Revisions List Now Works Correctly"} />
+
+This has now been taken care of. Clicking on the link will correctly redirect the user to page's preview URL.
+
+#### Fixed Highlighting Of Active Page Elements In Page Editor ([#3152](https://github.com/webiny/webiny-js/pull/3152))
 
 In the page editor, when clicking on some page elements like Image and Form, orange borders that surround the element would not be rendered correctly.
 
