--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -67,7 +67,9 @@ By the default, the checkbox defining the default fields creation is checked, bu
 
 ## Page Builder
 
-### Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086)) 
+### Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
+
+✍️
 
 ### Multiple UI Improvements
 
@@ -159,6 +161,8 @@ Previously, the title specified via the General settings would be used instead, 
 </Alert>
 
 ### Improved Grid and Cell Page Elements https://github.com/webiny/webiny-js/pull/3012
+
+✍️
 
 Grid page element now provides users with a couple of new features in page element settings.
 
@@ -258,30 +262,37 @@ export const HeroSectionWithTheme = styled("div")(
 ## Form Builder
 
 ### Introduced E-Mail Triggers ([#2957](https://github.com/webiny/webiny-js/pull/2957))
-E-mail - Submission Notification
-E-mail - Thank You E-mail
+
+✍️
+
+[//]: # (E-mail - Submission Notification)
+
+[//]: # (E-mail - Thank You E-mail)
 
 ### Added the Ability to Import/export Forms ([#3077](https://github.com/webiny/webiny-js/pull/3077))
 
+✍️
+
 ### Improved Export Of Submissions  ([#3093](https://github.com/webiny/webiny-js/pull/3093) [#2965](https://github.com/webiny/webiny-js/pull/2965))
 
-fix: fix unreadable form submission values
+✍️
 
-feat: add date to form submission export
 
 ### Introduced Copy Form Submission to Clipboard ([#2952](https://github.com/webiny/webiny-js/pull/2952))
 
+✍️
+
 ### Ability to Have "Other" Option ([#3031](https://github.com/webiny/webiny-js/pull/3031))
+
+✍️
 
 ### Multiple Improvements on the Default Form Layout ([#3009](https://github.com/webiny/webiny-js/pull/3009) [#2950](https://github.com/webiny/webiny-js/pull/2950) [#2964](https://github.com/webiny/webiny-js/pull/2964))
 
-fix: add missed required field indicator change 
-
-feat: add an indicator that the form field is required 
-
-feat: move help text under the form label 
+✍️
 
 ### Added Basic Form Field ID Validation ([#3017](https://github.com/webiny/webiny-js/pull/3017))
+
+✍️
 
 ## Cloud Infrastructure
 
